--- a/pom.xml
+++ b/pom.xml
@@ -1,5 +1,5 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+		 xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>com.shursulei.spark</groupId>
 	<artifactId>scalaspark</artifactId>
@@ -84,15 +84,15 @@
 		</dependency>
 		<!-- https://mvnrepository.com/artifact/org.apache.spark/spark-streaming-kafka -->
 		<dependency>
-		    <groupId>org.apache.spark</groupId>
-		    <artifactId>spark-streaming-kafka_2.10</artifactId>
-		    <version>1.6.1</version>
+			<groupId>org.apache.spark</groupId>
+			<artifactId>spark-streaming-kafka_2.10</artifactId>
+			<version>1.6.1</version>
 		</dependency>
 		<!-- https://mvnrepository.com/artifact/org.apache.spark/spark-streaming-kafka-0-10 -->
 		<dependency>
-		    <groupId>org.apache.spark</groupId>
-		    <artifactId>spark-streaming-kafka-0-10_2.11</artifactId>
-		    <version>2.2.2</version>
+			<groupId>org.apache.spark</groupId>
+			<artifactId>spark-streaming-kafka-0-10_2.11</artifactId>
+			<version>2.2.2</version>
 		</dependency>
 		<dependency>
 			<groupId>org.apache.commons</groupId>
@@ -115,28 +115,39 @@
 		</dependency>
 		<!-- https://mvnrepository.com/artifact/org.apache.spark/spark-mllib -->
 		<dependency>
-		    <groupId>org.apache.spark</groupId>
-		    <artifactId>spark-mllib_2.11</artifactId>
-		    <version>2.0.0</version>
-		    <scope>runtime</scope>
+			<groupId>org.apache.spark</groupId>
+			<artifactId>spark-mllib_2.11</artifactId>
+			<version>2.0.0</version>
+			<scope>runtime</scope>
 		</dependency>
 		<!-- https://mvnrepository.com/artifact/org.apache.spark/spark-assembly -->
 		<dependency>
-		    <groupId>org.apache.spark</groupId>
-		    <artifactId>spark-assembly_2.10</artifactId>
-		    <version>1.1.1</version>
-		    <type>pom</type>
-		    <scope>test</scope>
+			<groupId>org.apache.spark</groupId>
+			<artifactId>spark-assembly_2.10</artifactId>
+			<version>1.1.1</version>
+			<type>pom</type>
+			<scope>test</scope>
 		</dependency>
 		<dependency>
-		    <groupId>mysql</groupId>
-		    <artifactId>mysql-connector-java</artifactId>
-		    <version>5.1.38</version>
+			<groupId>mysql</groupId>
+			<artifactId>mysql-connector-java</artifactId>
+			<version>5.1.38</version>
 		</dependency>
 		<dependency>
-		    <groupId>commons-dbcp</groupId>
-		    <artifactId>commons-dbcp</artifactId>
-		    <version>1.4</version>
+			<groupId>commons-dbcp</groupId>
+			<artifactId>commons-dbcp</artifactId>
+			<version>1.4</version>
+		</dependency>
+		<dependency>
+			<groupId>org.apache.spark</groupId>
+			<artifactId>spark-sql_2.11</artifactId>
+			<version>1.6.3</version>
+		</dependency>
+		<dependency>
+			<groupId>org.apache.spark</groupId>
+			<artifactId>spark-catalyst_2.11</artifactId>
+			<version>1.6.3</version>
+			<scope>compile</scope>
 		</dependency>
 	</dependencies>
 	<build>
